# itc-benchmarks

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  spec.docx
.github/workflows/: semgrep.yml
01.w_Defects/: Makefile.am  bit_shift.c  buffer_underrun_dynamic.c  cmp_funcadr.c  conflicting_cond.c  data_lost.c  data_overflow.c  data_underflow.c  dead_code.c  dead_lock.c  double_free.c  double_lock.c  double_release.c  endless_loop.c  free_null_pointer.c  func_pointer.c  function_return_value_unchecked.c  invalid_extern.c  invalid_memory_access.c  littlemem_st.c  livelock.c  lock_never_unlock.c  main.c  memory_allocation_failure.c  memory_leak.c  not_return.c  null_pointer.c  overrun_st.c  ow_memcpy.c  pow_related_errors.c  ptr_subtraction.c  race_condition.c  redundant_cond.c  return_local.c  sign_conv.c  st_cross_thread_access.c  st_overflow.c  stubs.c  uninit_memory_access.c  uninit_pointer.c  (+4 more)
02.wo_Defects/: Makefile.am  bit_shift.c  buffer_underrun_dynamic.c  cmp_funcadr.c  conflicting_cond.c  data_lost.c  data_overflow.c  data_underflow.c  dead_code.c  dead_lock.c  deletion_of_data_structure_sentinel.c  double_lock.c  double_release.c  endless_loop.c  free_null_pointer.c  func_pointer.c  function_return_value_unchecked.c  insign_code.c  invalid_extern.c  invalid_extern_1.c  invalid_memory_access.c  littlemem_st.c  livelock.c  lock_never_unlock.c  memory_allocation_failure.c  memory_leak.c  not_return.c  null_pointer.c  overrun_st.c  ow_memcpy.c  pow_related_errors.c  ptr_subtraction.c  race_condition.c  redundant_cond.c  return_local.c  sign_conv.c  st_cross_thread_access.c  st_overflow.c  st_underrun.c  underrun_st.c  (+6 more)
03.w_Defects_Cpp/: Makefile.am
04.wo_Defects_Cpp/: Makefile.am  main.cpp
DefectVariation/01.w_Defects/: conflicting_cond.c  data_lost.c  data_underflow.c  dead_code.c  dead_lock.c  deletion_of_data_structure_sentinel.c  double_lock.c  endless_loop.c  func_pointer.c  invalid_extern.c  invalid_extern_1.c  invalid_memory_access.c  livelock.c  memory_allocation_failure.c  memory_leak.c  not_return.c  null_pointer.c  ow_memcpy.c  race_condition.c  redundant_cond.c  sign_conv.c  sleep_lock.c  st_cross_thread_access.c  stubs.c  unused_var.c  zero_division.c
DefectVariation/02.wo_Defects/: bit_shift.c  cmp_funcadr.c  conflicting_cond.c  data_lost.c  data_overflow.c  data_underflow.c  free_nondynamically_allocated_memory.c  free_null_pointer.c  func_pointer.c  invalid_extern.c  invalid_memory_access.c  littlemem_st.c  livelock.c  main.c  memory_leak.c  pow_related_errors.c  redundant_cond.c  sleep_lock.c  st_cross_thread_access.c  st_overflow.c  underrun_st.c  uninit_memory_access.c  wrong_arguments_func_pointer.c  zero_division.c
DefectVariation/03.w_Defects_Cpp/: HeaderFile.hpp  improper_error_handling.cpp
DefectVariation/04.wo_Defects_Cpp/: HeaderFile.hpp  main.cpp
include/: HeaderFile.h  HeaderFile.hpp
src/01.w_Defects/: HeaderFile.h  bit_shift.c  data_overflow.c  free_nondynamic_allocated_memory.c  free_null_pointer.c  improper_termination_of_block.c  insign_code.c  lock_never_unlock.c  overrun_st.c  ptr_subtraction.c  st_overflow.c  underrun_st.c  uninit_pointer.c  uninit_var.c
src/02.wo_Defects/: HeaderFile.h  dead_code.c  dead_lock.c  double_lock.c  improper_termination_of_block.c  lock_never_unlock.c  memory_allocation_failure.c  not_return.c  null_pointer.c  ptr_subtraction.c  sign_conv.c  st_underrun.c  uninit_var.c  unlock_without_lock.c  unused_var.c
src/04.wo_Defects_Cpp/: improper_error_handling.cpp
