AM_CPPFLAGS = -I$(top_srcdir)/include
AM_CFLAGS = -pthread
AM_LDFLAGS = -lm
bin_PROGRAMS = 02_wo_Defects
02_wo_Defects_SOURCES = \
bit_shift.c				lock_never_unlock.c \
buffer_overrun_dynamic.c		main.c \
buffer_underrun_dynamic.c		memory_allocation_failure.c \
cmp_funcadr.c				memory_leak.c \
conflicting_cond.c			not_return.c \
data_lost.c				null_pointer.c \
data_overflow.c				overrun_st.c \
data_underflow.c			ow_memcpy.c \
dead_code.c				pow_related_errors.c \
dead_lock.c				ptr_subtraction.c \
deletion_of_data_structure_sentinel.c	race_condition.c \
double_free.c				redundant_cond.c \
double_lock.c				return_local.c \
double_release.c			sign_conv.c \
endless_loop.c				sleep_lock.c \
free_nondynamically_allocated_memory.c	st_cross_thread_access.c \
free_null_pointer.c			st_overflow.c \
func_pointer.c				st_underrun.c \
function_return_value_unchecked.c	underrun_st.c \
improper_termination_of_block.c		uninit_memory_access.c \
insign_code.c				uninit_pointer.c \
invalid_extern_1.c			uninit_var.c \
invalid_extern.c			unlock_without_lock.c \
invalid_memory_access.c			unused_var.c \
littlemem_st.c				wrong_arguments_func_pointer.c \
livelock.c				zero_division.c
